# OpenUKPublicDataMCP

./: .agent-manifest.json  .agent-status.md  .agent-tasks.json  .env.example  .gitignore  AGENTS.md  CONTEXT.md  HERMES.md  README.md  pyproject.toml  setup-prompt.txt
.hermes/prompts/: agy-task-007-os-tfl.md  codex-task-006-ons-observations.md  task-009-planning-data-gov-uk.md
docs/adr/: 0001-no-key-first-source-cited-fastmcp.md  0002-optional-key-providers.md
docs/plans/: 2026-07-05-openuk-v1-implementation.md
docs/tests/: Q2-executive-report.md  README.md  exec-01-quarterly-uk-public-data-pulse.md  exec-02-cost-of-living-inflation-snapshot.md  exec-03-climate-resilience-ops-brief.md  exec-05-research-capability-roadmap.md  live-smoke-commands.md
integrations/: dynamic-mcp-proxy-user-catalogue-entry.json
research/: LINKS.md  README.md
research/github-projects/: dynamic-mcp-proxy-learnings.md  govuk-mcp.md  parliament-mcp.md  uk-law-mcp.md  uk-ons-mcp-server.md
research/notes/: 2026-07-05-uk-enrichment-met-office-parliament.md  source-priority-catalogue.md
research/templates/: project-note.md
scripts/: bootstrap-validate.py  cleanup.py  force-unlock.py  heartbeat.py  init.py  lock.py  run-web.sh  tasks.py  unlock.py  update-status.py
src/openukpublicdata_mcp/: geography.py  http.py  planning.py  rest_api.py  server.py  sources.py  steering.py
tests/: test_planning.py  test_providers.py  test_rest_api.py  test_server.py  test_sources.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  (+1 more)
(+11 files in other folders)
